--- a/Cats/app/src/main/AndroidManifest.xml
+++ b/Cats/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cats">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
